; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/unbound/services/extr_listen_dnsport.c_tcp_req_info_start_write_buf.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/unbound/services/extr_listen_dnsport.c_tcp_req_info_start_write_buf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tcp_req_info = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tcp_req_info*, i32*, i64)* @tcp_req_info_start_write_buf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tcp_req_info_start_write_buf(%struct.tcp_req_info* %0, i32* %1, i64 %2) #0 {
  %4 = alloca %struct.tcp_req_info*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  store %struct.tcp_req_info* %0, %struct.tcp_req_info** %4, align 8
  store i32* %1, i32** %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load %struct.tcp_req_info*, %struct.tcp_req_info** %4, align 8
  %8 = getelementptr inbounds %struct.tcp_req_info, %struct.tcp_req_info* %7, i32 0, i32 0
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 8
  %12 = call i32 @sldns_buffer_clear(i32 %11)
  %13 = load %struct.tcp_req_info*, %struct.tcp_req_info** %4, align 8
  %14 = getelementptr inbounds %struct.tcp_req_info, %struct.tcp_req_info* %13, i32 0, i32 0
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 8
  %18 = load i32*, i32** %5, align 8
  %19 = load i64, i64* %6, align 8
  %20 = call i32 @sldns_buffer_write(i32 %17, i32* %18, i64 %19)
  %21 = load %struct.tcp_req_info*, %struct.tcp_req_info** %4, align 8
  %22 = getelementptr inbounds %struct.tcp_req_info, %struct.tcp_req_info* %21, i32 0, i32 0
  %23 = load %struct.TYPE_2__*, %struct.TYPE_2__** %22, align 8
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 8
  %26 = call i32 @sldns_buffer_flip(i32 %25)
  %27 = load %struct.tcp_req_info*, %struct.tcp_req_info** %4, align 8
  %28 = getelementptr inbounds %struct.tcp_req_info, %struct.tcp_req_info* %27, i32 0, i32 0
  %29 = load %struct.TYPE_2__*, %struct.TYPE_2__** %28, align 8
  %30 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %29, i32 0, i32 0
  store i64 0, i64* %30, align 8
  ret void
}

declare dso_local i32 @sldns_buffer_clear(i32) #1

declare dso_local i32 @sldns_buffer_write(i32, i32*, i64) #1

declare dso_local i32 @sldns_buffer_flip(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
